crates/cli/tests/snapshots/test__cli_main_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
Unified WebAssembly developer tools

Usage: wasm [OPTIONS] [COMMAND]

Commands:
  run      Execute a Wasm Component
  init     Create a new wasm component in an existing directory
  inspect  Inspect a Wasm Component
  convert  Convert a Wasm Component to another format
  local    Detect and manage local WASM files
  package  Package, push, and pull Wasm Components
  compose  Compose Wasm Components with other components
  self     Configure the `wasm(1)` tool, generate completions, & manage state
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode.
          
          Disables all network operations. Commands that require network access will fail with an error. Local-only commands will continue to work.
