crates/cli/tests/snapshots/test__cli_self_help_snapshot.snap
---
source: crates/cli/tests/test.rs
expression: output
---
Configure the `wasm(1)` tool, generate completions, & manage state

Usage: wasm self [OPTIONS] <COMMAND>

Commands:
  state        Print diagnostics about the local state
  config       Show configuration file location and current settings
  completions  Generate shell completions for the given shell
  man-pages    Generate man pages for the CLI and write them to a directory
  help         Print this message or the help of the given subcommand(s)

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --color <WHEN>
          When to use colored output.
          
          Can also be controlled via environment variables: - NO_COLOR=1 (disables color) - CLICOLOR=0 (disables color) - CLICOLOR_FORCE=1 (forces color)
          
          [default: auto]
          [possible values: auto, always, never]

      --offline
          Run in offline mode.
          
          Disables all network operations. Commands that require network access will fail with an error. Local-only commands will continue to work.
